--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,4 @@
-@tailwind base;
-@tailwind components;
+@import 'tailwindcss/utilities';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 @tailwind utilities;
