--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,3 @@
-@import 'tailwindcss/utilities';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@tailwind base;
+@tailwind components;
 @tailwind utilities;
