--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@font-face {
+    font-family: Glacial Indifference;
+    src: url("/fonts/GlacialIndifference-Regular.otf") format("opentype");
+  }
+
+@font-face {
+    font-family: Glacial;
+    src: url("/fonts/GlacialIndifference-Bold.otf") format("opentype");
+}
+
+font-face {
+    font-family: OpenSans;
+    src: url("/fonts/OpenSans-VariableFont_wdth/,wght.ttf") format("truetype");
+}
